--- a/menu/content/ambient-menu-style.css
+++ b/menu/content/ambient-menu-style.css
@@ -1,23 +1,36 @@
+body {
+	background-color:LightCyan;
+}
+
 table {
 	width: 90%;
-	border: 1px solid black;
-	border-collapse: collapse;
+	/*border: 1px solid black;
+	border-collapse: collapse;*/
 	font-size:18px;
 	font-weight: bold;
 	background-color:LightCyan;
 } 
-td {
-	border: 1px solid black;
+th,td {
+	border: 0px solid black;
 	border-collapse: collapse;
 	font-size:18px;
 	font-weight: bold;
 	background-color:LightCyan;
 }
 th {
-	border: 1px solid black;
-	border-collapse: collapse;
-	background-color:LightSkyBlue;
+	/*border: 0px solid black;
+	border-collapse: collapse;*/
+	background-color:Cyan;
 }
-.menicka{
-	border: 1px solid black;
+
+/*Kuta*/
+em[title] {
+	display:none;
+}
+li {
+	list-style-type:none;
+}
+.cena {
+	display:inline;
+	float:right;
 }
