--- a/menu/content/ambient-menu-style.css
+++ b/menu/content/ambient-menu-style.css
@@ -8,15 +8,15 @@ table {
 	font-weight: bold;
 	background-color:LightCyan;
 } 
-th,td {
+td {
 	border: 0px solid black;
 	border-collapse: collapse;
-	font-size:18px;
-	font-weight: bold;
+	/*font-size:18px;
+	font-weight: bold;*/
 	background-color:LightCyan;
 }
 th {
-	background-color:PowderBlue;
+	background-color:#B0E0E6; /*PowderBlue */
 }
 a {
 	font-size:12px;
