Update daily menu

--- a/menu/content/ambient-menu-style.css
+++ b/menu/content/ambient-menu-style.css
@@ -3,10 +3,12 @@ body {
 	font-family: system-ui;
 }
 
+/*
 strong{
 	font-weight:normal;
   }
-  
+ */
+
 table {
 	width: 90%;
 	font-size:18px;
@@ -62,5 +64,5 @@ h5 {
 	text-decoration: underline;
 	font-family: system-ui;
 	font-size:medium;
-	font-weight:normal;
+	/* font-weight:normal; */
 }
