--- a/menu/content/ambient-menu-style.css
+++ b/menu/content/ambient-menu-style.css
@@ -67,7 +67,7 @@
 /*### Small Screen ###*/
 @media only screen and (max-width: 1920px) {
 	body {
-		background-color:rgb(224, 226, 255);
+		background-color:LightCyan;
 		font-family: system-ui;
 		font-size:4vw;
 	}
@@ -75,7 +75,7 @@
 	table {
 		width: 100%;
 		font-weight: bold;
-		background-color:rgb(224, 226, 255);
+		background-color:LightCyan;
 		font-family: system-ui;
 		font-size:4vw;
 	} 
@@ -90,7 +90,7 @@
 
 	th {
 		/* background-color:#B0E0E6; */ /*PowderBlue */
-		background-color:#e2b0e6; 
+		background-color:#b0b8e6; 
 		font-weight: bold;
 		font-family: system-ui;
 		font-size:4vw;
