--- a/menu/content/ambient-menu-style.css
+++ b/menu/content/ambient-menu-style.css
@@ -90,7 +90,7 @@
 
 	th {
 		/* background-color:#B0E0E6; */ /*PowderBlue */
-		background-color:deepskyblue; 
+		background-color:lightskyblue; 
 		font-weight: bold;
 		font-family: system-ui;
 		font-size:4vw;
