Update daily menu

--- a/menu/content/ambient-menu-style.css
+++ b/menu/content/ambient-menu-style.css
@@ -69,6 +69,10 @@
 		font-family: system-ui;
 		font-size:1vw;
 	}
+	input {
+  		display:none;
+	}
+
 }
 
 /*### Small Screen ###*/
@@ -147,6 +151,9 @@
 		text-decoration: underline;
 		font-family: system-ui;
 		font-size:1vw;
+	}
+	input {
+  		display:none;
 	}
 
 }
