--- a/menu/content/ambient-menu-style.css
+++ b/menu/content/ambient-menu-style.css
@@ -2,7 +2,7 @@
 @media only screen and (min-width: 1280px) {
 	#lunchbar {
 		display: flex;
-		justify-content: center;
+		justify-content: left;
 		flex-wrap: nowrap;
 		width: 100%; /* Ensures the nav bar stretches across the full width */
 	  }
@@ -21,8 +21,8 @@
 	  
 	  #lunchbar ul li a {
 		display: block;
-		text-align: center;
-		padding: 0.5em 1em; /* Uses em for scalable padding */
+		text-align: left;
+		padding: 0.5em 0.5em; /* Uses em for scalable padding */
 		text-decoration: none;
 		white-space: nowrap;
 	  }
@@ -143,7 +143,7 @@
 	}
 	td.name .title, td.name .desc {
 		display: inline; /* Makes both elements inline, so they appear on the same line */
-		margin-right: 5px; /* Optional: Adds a small space between the title and description */
+		margin-right: 2px; /* Optional: Adds a small space between the title and description */
 	}
 	table.list.js-bookmark-block {
 		/*display:inline;
@@ -161,6 +161,31 @@
 		font-size:1vw;
 	}	
 
+	#lunchbar {
+		text-align: center;
+		padding: 10px 0;
+	}
+
+	.nav-row {
+		margin: 5px 0;
+	}
+
+	.nav-row ul {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+		display: inline-block;
+	}
+
+	.nav-row li {
+		display: inline-block;
+		margin: 0 10px;
+	}
+
+	.nav-row a {
+		text-decoration: none;
+		padding: 5px 10px;
+	}
 
 }
 
